k8s/grafana-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: warehouse-system
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
        - name: grafana
          image: grafana/grafana:10.0.0
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: storage
              mountPath: /var/lib/grafana
            - name: provisioning-datasource
              mountPath: /etc/grafana/provisioning/datasources/influxdb.yaml
              subPath: influxdb.yaml
            - name: provisioning-dashboard-conf
              mountPath: /etc/grafana/provisioning/dashboards/dashboard.yaml
              subPath: dashboard.yaml
            - name: provisioning-dashboard-json
              mountPath: /etc/grafana/provisioning/dashboards/warehouse-overview.json
              subPath: warehouse-overview.json
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: grafana-pvc
        - name: provisioning-datasource
          configMap:
            name: grafana-datasources
        - name: provisioning-dashboard-conf
          configMap:
            name: grafana-dashboards-prov
        - name: provisioning-dashboard-json
          configMap:
            name: grafana-dashboards-json
